linera-protocol/linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_hash_view_code_CustomContext_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_hash_view_code(input))
---
impl<MyParam> linera_views::views::HashableView for TestView<MyParam>
where
    RegisterView<CustomContext, usize>: linera_views::views::HashableView,
    CollectionView<
        CustomContext,
        usize,
        RegisterView<CustomContext, usize>,
    >: linera_views::views::HashableView,
    MyParam: Send + Sync + 'static,
    Self: linera_views::views::View,
{
    type Hasher = linera_views::sha3::Sha3_256;
    async fn hash_mut(
        &mut self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::Hasher as _;
        use std::io::Write as _;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash_mut().await?.as_ref())?;
        hasher.write_all(self.collection.hash_mut().await?.as_ref())?;
        Ok(hasher.finalize())
    }
    async fn hash(
        &self,
    ) -> Result<
        <Self::Hasher as linera_views::views::Hasher>::Output,
        linera_views::ViewError,
    > {
        use linera_views::views::Hasher as _;
        use std::io::Write as _;
        let mut hasher = Self::Hasher::default();
        hasher.write_all(self.register.hash().await?.as_ref())?;
        hasher.write_all(self.collection.hash().await?.as_ref())?;
        Ok(hasher.finalize())
    }
}
